--- a/.github/workflows/security-audit.yml
+++ b/.github/workflows/security-audit.yml
@@ -1,13 +1,17 @@
-name: 'Weekly Security Audit'
+name: 'Security Audit'
 
 on:
   schedule:
-    - cron: '0 0 * * 0'  # Run at midnight every Sunday
-  workflow_dispatch:  # Allow manual triggering
+    - cron: '0 0 * * 0'  # Run weekly on Sundays at midnight
+  workflow_dispatch:     # Allow manual triggering
+
+permissions:
+  contents: read
+  issues: write          # Explicitly grant permission to create issues
 
 jobs:
-  security-audit:
-    name: Security Audit
+  gosec:
+    name: Run Gosec Security Scanner
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -19,49 +23,58 @@ jobs:
           go-version: '1.24.x'
           cache: true
 
-      - name: Install govulncheck
-        run: go install golang.org/x/vuln/cmd/govulncheck@latest
-
-      - name: Run govulncheck
-        run: govulncheck ./...
-
-      - name: Install gosec
-        run: go install github.com/securego/gosec/v2/cmd/gosec@latest
-
-      - name: Run gosec
-        run: gosec -fmt=json -out=gosec-results.json ./...
-
-      - name: Install nancy
-        run: go install github.com/sonatype-nexus-community/nancy@latest
-
-      - name: Check dependencies with nancy
-        run: go list -json -deps ./... | nancy sleuth
-
-      - name: Run go vet
-        run: go vet ./...
-
-      - name: Install staticcheck
-        run: go install honnef.co/go/tools/cmd/staticcheck@latest
-
-      - name: Run staticcheck
-        run: staticcheck ./...
-
-      - name: Upload security scan results
-        if: always()
-        uses: actions/upload-artifact@v4
+      - name: Run Gosec
+        uses: securego/gosec@master
         with:
-          name: security-scan-results
-          path: |
-            gosec-results.json
+          args: '-fmt=json -out=gosec-results.json ./...'
+        continue-on-error: true
+        id: gosec
 
-      - name: Send notification on failure
-        if: failure()
+      - name: Process Gosec Results
+        if: ${{ success() || failure() }}
+        id: process
+        run: |
+          if [ -f gosec-results.json ]; then
+            ISSUES=$(cat gosec-results.json | jq -r '.Issues | length')
+            echo "issues=$ISSUES" >> $GITHUB_OUTPUT
+            if [ "$ISSUES" -gt 0 ]; then
+              echo "has_issues=true" >> $GITHUB_OUTPUT
+            else
+              echo "has_issues=false" >> $GITHUB_OUTPUT
+            fi
+          else
+            echo "has_issues=false" >> $GITHUB_OUTPUT
+            echo "issues=0" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Create Issue
+        if: ${{ steps.process.outputs.has_issues == 'true' }}
         uses: actions/github-script@v7
         with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            github.rest.issues.create({
+            const fs = require('fs');
+            const resultsJson = JSON.parse(fs.readFileSync('gosec-results.json', 'utf8'));
+            
+            // Format issues for GitHub markdown
+            let issueBody = `# Security Scan Results\n\n`;
+            issueBody += `${resultsJson.Issues.length} potential security issue(s) found on ${new Date().toISOString().split('T')[0]}.\n\n`;
+            
+            resultsJson.Issues.forEach((issue, index) => {
+              issueBody += `## Issue ${index+1}: ${issue.rule_id} (${issue.severity})\n`;
+              issueBody += `**File:** ${issue.file}:${issue.line}\n\n`;
+              issueBody += `**Description:** ${issue.details}\n\n`;
+              issueBody += `**Code:** \`${issue.code}\`\n\n`;
+              issueBody += `---\n\n`;
+            });
+            
+            issueBody += `\nRun triggered by: ${context.payload.sender ? context.payload.sender.login : 'scheduled job'}\n`;
+            issueBody += `[View workflow run](${context.serverUrl}/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId})`;
+            
+            await github.rest.issues.create({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              title: 'Security audit failed on ' + new Date().toISOString().split('T')[0],
-              body: 'The weekly security audit workflow failed. Please check the [workflow run](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) for details.'
-            })
+              title: `Security issues detected (${resultsJson.Issues.length}) - ${new Date().toISOString().split('T')[0]}`,
+              body: issueBody,
+              labels: ['security', 'bug']
+            });
